Add structure for header. Add logo, search bar, categories menu. Add styles.

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,6 +1,10 @@
 @import "./variables.styl"
 @import "../components/global/AmiiboItem/amiiboItem.styl";
 @import "../components/global/AmiiboList/amiiboList.styl";
+@import "../components/global/Navbar/navbar.styl";
+@import "../components/global/SearchBar/searchBar.styl";
+@import "../components/home/CategoriesMenu/categoriesMenu.styl";
+@import "../components/home/Home/home.styl";
 
 *,
 *::before,
