--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -1,6 +1,10 @@
 // colors
-$color-box-shadow = #64646480
+$color-box-shadow = #64646480;
+$color-white = #fff;
+$color-border = #e7e8e9;
 
 // sizes
-$size-card-width = 20.8rem
-$size-card-height = 28.8rem
+$size-card-width = 20.8rem;
+$size-card-height = 28.8rem;
+$size-header-height = 8rem;
+$size-max-width = 102.4rem;
