--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,6 +32,71 @@
   gap: 2.4rem;
   grid-template-columns: repeat(4, 20rem);
 }
+.Navbar {
+  align-items: center;
+  box-shadow: 0 3px 15px rgba(100,100,100,0.502);
+  display: flex;
+  height: 100%;
+}
+.Navbar__wrapper {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  margin: auto;
+  max-width: 102.4rem;
+  padding: 0 2.4rem;
+}
+.Navbar__logo {
+  width: 16rem;
+}
+.Navbar__logo img {
+  width: 100%;
+}
+.SearchBar {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  border: 1px solid #e7e8e9;
+  border-radius: 4.2rem;
+  justify-content: space-between;
+  margin-left: 1.6rem;
+  padding: 0 2.4rem;
+}
+.SearchBar input {
+  border: none;
+  border-radius: 4.2rem;
+  outline: none;
+  padding: 1.6rem 1.6rem 1.6rem 0;
+}
+.SearchBar__icon {
+  width: 2.4rem;
+}
+.CategoriesMenu {
+  align-items: center;
+  display: flex;
+}
+.CategoriesMenu__text {
+  font-size: 1.6rem;
+  padding: 0 1.6rem;
+}
+.CategoriesMenu__icon {
+  height: 2.7rem;
+  width: 2.4rem;
+}
+.Home {
+  padding-top: 8rem;
+}
+.Home__header {
+  background: #fff;
+  height: 8rem;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+.Home__main {
+  padding-top: 8rem;
+}
 *,
 *::before,
 *::after {
