Add search amiibos to handle results of the search bar. Logic to show some results. Add styles

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -2,6 +2,7 @@
 @import "../components/global/AmiiboItem/amiiboItem.styl";
 @import "../components/global/AmiiboList/amiiboList.styl";
 @import "../components/global/Navbar/navbar.styl";
+@import "../components/global/SearchAmiibos/SearchAmiibos.styl";
 @import "../components/global/SearchBar/searchBar.styl";
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
