--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -1,7 +1,9 @@
 // colors
 $color-box-shadow = #64646480;
-$color-white = #fff;
 $color-border = #e7e8e9;
+$color-grey = #757a78; 
+$color-white = #fff;
+$color-black = #000;
 
 // sizes
 $size-card-width = 20.8rem;
