--- a/src/components/global/SearchBar/searchBar.styl
+++ b/src/components/global/SearchBar/searchBar.styl
@@ -7,12 +7,29 @@
   justify-content: space-between;
   margin-left: 1.6rem;
   padding: 0 2.4rem;
+  position: relative;
 
   & input
     border: none;
     border-radius: 4.2rem;
+    flex: 1;
+    font-size: 1.6rem;
     outline: none;
     padding: 1.6rem 1.6rem 1.6rem 0;
 
   &__icon
     width: 2.4rem;
+
+  &__results
+    background-color: $color-white;
+    border-radius: 1.6rem;
+    box-shadow: 0 3px 15px $color-box-shadow;
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 8rem;
+
+    & > div:last-child
+      border: none;
