--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,6 +52,41 @@
 .Navbar__logo img {
   width: 100%;
 }
+.SearchAmiibos {
+  flex: 1;
+}
+.SearchAmiibos__item {
+  align-items: center;
+  border-bottom: 0.1rem solid #757a78;
+  display: flex;
+  padding: 1.6rem;
+}
+.SearchAmiibos__item__image {
+  height: 6.4rem;
+  width: 6.4rem;
+}
+.SearchAmiibos__item__image img {
+  height: 100%;
+  object-fit: contain;
+  width: 100%;
+}
+.SearchAmiibos__item__info {
+  color: #757a78;
+  font-size: 1.6rem;
+  font-weight: 400;
+  padding-left: 2.4rem;
+}
+.SearchAmiibos__search {
+  display: flex;
+}
+.SearchAmiibos__search__link {
+  color: #000;
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 700;
+  padding: 2.4rem;
+  text-decoration: none;
+}
 .SearchBar {
   align-items: center;
   display: flex;
@@ -61,15 +96,32 @@
   justify-content: space-between;
   margin-left: 1.6rem;
   padding: 0 2.4rem;
+  position: relative;
 }
 .SearchBar input {
   border: none;
   border-radius: 4.2rem;
+  flex: 1;
+  font-size: 1.6rem;
   outline: none;
   padding: 1.6rem 1.6rem 1.6rem 0;
 }
 .SearchBar__icon {
   width: 2.4rem;
+}
+.SearchBar__results {
+  background-color: #fff;
+  border-radius: 1.6rem;
+  box-shadow: 0 3px 15px rgba(100,100,100,0.502);
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 8rem;
+}
+.SearchBar__results > div:last-child {
+  border: none;
 }
 .CategoriesMenu {
   align-items: center;
