--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -1,6 +1,7 @@
 // colors
 $color-box-shadow = #64646480;
 $color-border = #e7e8e9;
+$color-backdrop = #00000033;
 $color-grey = #757a78; 
 $color-white = #fff;
 $color-black = #000;
