--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -4,9 +4,10 @@
 @import "../components/global/Navbar/navbar.styl";
 @import "../components/global/SearchAmiibos/SearchAmiibos.styl";
 @import "../components/global/SearchBar/searchBar.styl";
+@import "../components/global/Backdrop/backdrop.styl";
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
-
+  
 *,
 *::before,
 *::after 
