Add page for results, handle results in the context. Add styles

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -7,6 +7,7 @@
 @import "../components/global/Backdrop/backdrop.styl";
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
+@import "../components/results/Results/results.styl";
   
 *,
 *::before,
