--- a/src/components/global/SearchAmiibos/searchAmiibos.styl
+++ b/src/components/global/SearchAmiibos/searchAmiibos.styl
@@ -27,8 +27,7 @@
 
     &__link
       color: $color-black;
-      display: block;
+      cursor: pointer;
       font-size: 1.6rem;
       font-weight: 700;
       padding: 2.4rem;
-      text-decoration: none;
