--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,11 +81,10 @@
 }
 .SearchAmiibos__search__link {
   color: #000;
-  display: block;
+  cursor: pointer;
   font-size: 1.6rem;
   font-weight: 700;
   padding: 2.4rem;
-  text-decoration: none;
 }
 .SearchBar {
   align-items: center;
@@ -109,6 +108,7 @@
   padding: 1.6rem 1.6rem 1.6rem 0;
 }
 .SearchBar__link {
+  cursor: pointer;
   padding: 0.8rem;
 }
 .SearchBar__link__icon {
@@ -162,6 +162,20 @@
   top: 0;
 }
 .Home__main {
+  padding-top: 8rem;
+}
+.Results {
+  padding-top: 8rem;
+}
+.Results__header {
+  background: #fff;
+  height: 8rem;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+.Results__main {
   padding-top: 8rem;
 }
 *,
