Add drawer component. Add styles. Show drawer when click category menu.

--- a/src/components/home/CategoriesMenu/categoriesMenu.styl
+++ b/src/components/home/CategoriesMenu/categoriesMenu.styl
@@ -1,6 +1,8 @@
 .CategoriesMenu
-  align-items: center;
-  display: flex;
+  &__wrapper
+    align-items: center;
+    cursor: pointer;
+    display: flex;
 
   &__text
     font-size: 1.6rem;
