--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -5,6 +5,8 @@
 @import "../components/global/SearchAmiibos/SearchAmiibos.styl";
 @import "../components/global/SearchBar/searchBar.styl";
 @import "../components/global/Backdrop/backdrop.styl";
+@import "../components/global/Drawer/drawer.styl";
+@import "../components/global/CategoriesDrawer/categoriesDrawer.styl";
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
 @import "../components/results/Results/results.styl";
