--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -138,8 +138,39 @@
   width: 100%;
   z-index: 99;
 }
-.CategoriesMenu {
+.Drawer {
+  background-color: #fff;
+  height: 100%;
+  overflow: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transition: all 0.2s ease-out;
+  width: 32rem;
+  z-index: 100;
+}
+.Drawer__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.CategoriesDrawer__title {
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding: 1.6rem;
+  text-align: center;
+}
+.CategoriesDrawer__list {
+  font-size: 1.8rem;
+  list-style: none;
+}
+.CategoriesDrawer__list__item {
+  cursor: pointer;
+  margin: 0.8rem 0;
+  padding: 0.4rem 3.6rem;
+}
+.CategoriesMenu__wrapper {
   align-items: center;
+  cursor: pointer;
   display: flex;
 }
 .CategoriesMenu__text {
