--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -10,6 +10,7 @@
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
 @import "../components/results/Results/results.styl";
+@import "../components/categories/Categories/categories.styl";
   
 *,
 *::before,
