Add info bar component. Add Sort by component. Add functions to sort amiibos. Add styles. Add info bar in all pages

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -7,6 +7,8 @@
 @import "../components/global/Backdrop/backdrop.styl";
 @import "../components/global/Drawer/drawer.styl";
 @import "../components/global/CategoriesDrawer/categoriesDrawer.styl";
+@import "../components/global/InfoBar/infoBar.styl";
+@import "../components/global/SortBy/sortBy.styl";
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
 @import "../components/results/Results/results.styl";
