--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -2,9 +2,11 @@
 $color-box-shadow = #64646480;
 $color-border = #e7e8e9;
 $color-backdrop = #00000033;
+$color-button = #f7f8f9;
 $color-grey = #757a78; 
 $color-white = #fff;
 $color-black = #000;
+$color-red = #FF0018;
 
 // sizes
 $size-card-width = 20.8rem;
