--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -168,6 +168,52 @@
   margin: 0.8rem 0;
   padding: 0.4rem 3.6rem;
 }
+.InfoBar {
+  display: flex;
+  justify-content: center;
+}
+.InfoBar__grid {
+  display: grid;
+  gap: 2.4rem;
+  grid-template-columns: repeat(2, 41.6rem);
+  padding-bottom: 2.4rem;
+}
+.InfoBar__grid__title {
+  font-size: 4rem;
+}
+.SortBy {
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+}
+.SortBy > * {
+  margin: 0 0.8rem;
+}
+.SortBy > *:last-child {
+  margin: 0 0 0 0.8rem;
+}
+.SortBy__text {
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+.SortBy__button {
+  background-color: #fff;
+  border: none;
+  border-radius: 3.2rem;
+  box-shadow: 0 0.3rem 0.8rem rgba(100,100,100,0.502);
+  color: #000;
+  cursor: pointer;
+  font-size: 1.4rem;
+  opacity: 1;
+  outline: none;
+  padding: 0.8rem 2.4rem;
+  transition: all 0.1s;
+}
+.SortBy__button--active {
+  background-color: #f7f8f9;
+  color: #ff0018;
+  font-weight: 700;
+}
 .CategoriesMenu__wrapper {
   align-items: center;
   cursor: pointer;
