Add filters and logic to work that. Improve styles. Add services for get charactes list and types list

--- a/src/components/home/Home/home.styl
+++ b/src/components/home/Home/home.styl
@@ -10,4 +10,9 @@
     top: 0;
 
   &__main
+    display: flex;
+    justify-content: center;
     padding-top: $size-header-height;
+
+    &__info
+      padding: 0 1.6rem;
