--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -9,6 +9,8 @@
 @import "../components/global/CategoriesDrawer/categoriesDrawer.styl";
 @import "../components/global/InfoBar/infoBar.styl";
 @import "../components/global/SortBy/sortBy.styl";
+@import "../components/global/Filters/filters.styl";
+@import "../components/global/Filters/FilterItem/filterItem.styl";
 @import "../components/home/CategoriesMenu/categoriesMenu.styl";
 @import "../components/home/Home/home.styl";
 @import "../components/results/Results/results.styl";
