--- a/src/components/global/AmiiboList/amiiboList.styl
+++ b/src/components/global/AmiiboList/amiiboList.styl
@@ -5,4 +5,4 @@
   &__content
     display: grid;
     gap: 2.4rem;
-    grid-template-columns: repeat(4,20rem);
+    grid-template-columns: repeat(3, 20.8rem);
