--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,7 +30,7 @@
 .AmiiboList__content {
   display: grid;
   gap: 2.4rem;
-  grid-template-columns: repeat(4, 20rem);
+  grid-template-columns: repeat(3, 20.8rem);
 }
 .Navbar {
   align-items: center;
@@ -175,7 +175,7 @@
 .InfoBar__grid {
   display: grid;
   gap: 2.4rem;
-  grid-template-columns: repeat(2, 41.6rem);
+  grid-template-columns: repeat(2, 32rem);
   padding-bottom: 2.4rem;
 }
 .InfoBar__grid__title {
@@ -214,6 +214,65 @@
   color: #ff0018;
   font-weight: 700;
 }
+.Filters {
+  padding: 0 1.6rem;
+}
+.Filters__content {
+  border-radius: 0.8rem;
+  box-shadow: 0 3px 8px rgba(100,100,100,0.502);
+  height: 70vh;
+  left: 0;
+  overflow: auto;
+  padding: 1.6rem 2.4rem;
+  position: sticky;
+  top: 8.8rem;
+  width: 27.2rem;
+}
+.Filters__title {
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+.Filters__button {
+  background-color: #fff;
+  border: none;
+  border-radius: 3.2rem;
+  box-shadow: 0 0.3rem 0.8rem rgba(100,100,100,0.502);
+  color: #000;
+  cursor: pointer;
+  font-size: 1.4rem;
+  margin-top: 1.6rem;
+  opacity: 1;
+  outline: none;
+  padding: 0.8rem 2.4rem;
+  transition: all 0.1s;
+}
+.FilterItem {
+  border-bottom: 0.1rem solid #e7e8e9;
+  padding-top: 2.4rem;
+}
+.FilterItem__filter-by {
+  font-size: 1.6rem;
+}
+.FilterItem__content {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  padding: 0.8rem;
+}
+.FilterItem__content__label {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  font-size: 1.4rem;
+  margin: 0.8rem 0;
+  padding: 0.4rem;
+}
+.FilterItem__content__label > span {
+  padding-left: 0.8rem;
+}
+.FilterItem__content__label > input {
+  cursor: pointer;
+}
 .CategoriesMenu__wrapper {
   align-items: center;
   cursor: pointer;
@@ -239,7 +298,12 @@
   top: 0;
 }
 .Home__main {
+  display: flex;
+  justify-content: center;
   padding-top: 8rem;
+}
+.Home__main__info {
+  padding: 0 1.6rem;
 }
 .Results {
   padding-top: 8rem;
