--- a/src/components/global/CategoriesDrawer/categoriesDrawer.styl
+++ b/src/components/global/CategoriesDrawer/categoriesDrawer.styl
@@ -1,9 +1,23 @@
 .CategoriesDrawer
-  &__title
-    font-size: 1.8rem;
-    font-weight: 700;
-    padding: 1.6rem;
-    text-align: center;
+  &__header
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 2.4rem;
+
+    &__title
+      font-size: 1.8rem;
+      font-weight: 700;
+      text-align: center;
+
+    &__icon
+      cursor: pointer;
+      height: 2.4rem;
+      width: 2.4rem;
+
+      & img
+        height: 100%;
+        width: 100%;
 
   &__list
     font-size: 1.8rem;
