--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -153,11 +153,25 @@
   display: flex;
   flex-direction: column;
 }
-.CategoriesDrawer__title {
+.CategoriesDrawer__header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 2.4rem;
+}
+.CategoriesDrawer__header__title {
   font-size: 1.8rem;
   font-weight: 700;
-  padding: 1.6rem;
   text-align: center;
+}
+.CategoriesDrawer__header__icon {
+  cursor: pointer;
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.CategoriesDrawer__header__icon img {
+  height: 100%;
+  width: 100%;
 }
 .CategoriesDrawer__list {
   font-size: 1.8rem;
@@ -273,6 +287,9 @@
 .FilterItem__content__label > input {
   cursor: pointer;
 }
+.CategoriesMenu {
+  z-index: 100;
+}
 .CategoriesMenu__wrapper {
   align-items: center;
   cursor: pointer;
@@ -296,6 +313,7 @@
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 1;
 }
 .Home__main {
   display: flex;
