--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -15,6 +15,7 @@
 @import "../components/home/Home/home.styl";
 @import "../components/results/Results/results.styl";
 @import "../components/categories/Categories/categories.styl";
+@import "../components/favorites/Favorites/favorites.styl";
   
 *,
 *::before,
