--- a/src/components/global/AmiiboItem/amiiboItem.styl
+++ b/src/components/global/AmiiboItem/amiiboItem.styl
@@ -9,13 +9,19 @@
   padding: 1.6rem;
   width: $size-card-width;
 
-  &__image
-      height: 75%;
+  &__icon
+    align-self: flex-end;
+    cursor: pointer;
+    height: 2.4rem;
+    width: 2.4rem;
 
-    & img
-      object-fit: contain;
-      height: 100%;
-      width: 100%;
+  &__image
+      height: 70%;
+
+  & img
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
 
   &__name
     font-size: 1.8rem;
