--- a/src/components/home/CategoriesMenu/categoriesMenu.styl
+++ b/src/components/home/CategoriesMenu/categoriesMenu.styl
@@ -5,11 +5,16 @@
     align-items: center;
     cursor: pointer;
     display: flex;
+    margin-left: 1.6rem;
 
   &__text
     font-size: 1.6rem;
-    padding: 0 1.6rem;
+    padding-right: 1.6rem;
 
   &__icon
     height: 2.7rem;
     width: 2.4rem;
+
+    & img
+      height: 100%;
+      width: 100%;
