--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,13 +4,19 @@
   box-shadow: 0 3px 15px rgba(100,100,100,0.502);
   display: flex;
   flex-direction: column;
-  height: 28.8rem;
+  height: 35.2rem;
   justify-content: space-between;
   padding: 1.6rem;
   width: 20.8rem;
 }
+.AmiiboItem__icon {
+  align-self: flex-end;
+  cursor: pointer;
+  height: 2.4rem;
+  width: 2.4rem;
+}
 .AmiiboItem__image {
-  height: 75%;
+  height: 70%;
 }
 .AmiiboItem img {
   object-fit: contain;
@@ -38,7 +44,7 @@
   display: flex;
   height: 100%;
 }
-.Navbar__wrapper {
+.Navbar__content {
   align-items: center;
   display: flex;
   flex: 1;
@@ -49,7 +55,29 @@
 .Navbar__logo {
   width: 16rem;
 }
-.Navbar__logo img {
+.Navbar__logo__icon {
+  display: block;
+}
+.Navbar__logo__icon img {
+  width: 100%;
+}
+.Navbar__favorites {
+  align-items: center;
+  color: #000;
+  display: flex;
+  margin-left: 1.6rem;
+  text-decoration: none;
+}
+.Navbar__favorites__text {
+  font-size: 1.6rem;
+  padding-right: 1.6rem;
+}
+.Navbar__favorites__icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.Navbar__favorites__icon img {
+  height: 100%;
   width: 100%;
 }
 .SearchAmiibos {
@@ -294,14 +322,19 @@
   align-items: center;
   cursor: pointer;
   display: flex;
+  margin-left: 1.6rem;
 }
 .CategoriesMenu__text {
   font-size: 1.6rem;
-  padding: 0 1.6rem;
+  padding-right: 1.6rem;
 }
 .CategoriesMenu__icon {
   height: 2.7rem;
   width: 2.4rem;
+}
+.CategoriesMenu__icon img {
+  height: 100%;
+  width: 100%;
 }
 .Home {
   padding-top: 8rem;
@@ -349,6 +382,21 @@
   top: 0;
 }
 .Categories__main {
+  padding-top: 8rem;
+}
+.Favorites {
+  padding-top: 8rem;
+}
+.Favorites__header {
+  background: #fff;
+  height: 8rem;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1;
+}
+.Favorites__main {
   padding-top: 8rem;
 }
 *,
