Add dar mode. Add them context. Add color variables for change theme. Fix styles

--- a/src/components/global/AmiiboItem/amiiboItem.styl
+++ b/src/components/global/AmiiboItem/amiiboItem.styl
@@ -1,5 +1,6 @@
 .AmiiboItem
   align-items: center;
+  background-color: var(--theme-foreground);
   border-radius: 2.4rem;
   box-shadow: 0 3px 15px $color-box-shadow;
   display: flex;
