--- a/src/components/global/Drawer/drawer.styl
+++ b/src/components/global/Drawer/drawer.styl
@@ -1,5 +1,5 @@
 .Drawer
-  background-color: $color-white;
+  background-color: var(--theme-foreground);
   height: 100%;
   overflow: auto;
   position: fixed;
