--- a/src/components/global/SearchBar/searchBar.styl
+++ b/src/components/global/SearchBar/searchBar.styl
@@ -27,7 +27,7 @@
       width: 2.4rem;
 
   &__results
-    background-color: $color-white;
+    background-color: var(--theme-foreground);
     border-radius: 1.6rem;
     box-shadow: 0 3px 15px $color-box-shadow;
     display: flex;
