--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -3,6 +3,8 @@ $color-box-shadow = #64646480;
 $color-border = #e7e8e9;
 $color-backdrop = #00000033;
 $color-button = #f7f8f9;
+$color-toggle = #333333;
+$color-scroll = #9B9B9B;
 $color-grey = #757a78; 
 $color-white = #fff;
 $color-black = #000;
@@ -13,3 +15,13 @@ $size-card-width = 20.8rem;
 $size-card-height = 35.2rem;
 $size-header-height = 8rem;
 $size-max-width = 102.4rem;
+
+html 
+  --theme-text: #000;
+  --theme-background: #fff6f6;
+  --theme-foreground:#fff;
+
+html.dark
+  --theme-text: #fff;
+  --theme-background: #000;
+  --theme-foreground:#222222;
