Add styles for responsive. Change position of components in home to looks better

--- a/src/components/favorites/Favorites/favorites.styl
+++ b/src/components/favorites/Favorites/favorites.styl
@@ -12,3 +12,10 @@
 
   &__main
     padding-top: $size-header-height;
+
+@media (max-width: $mobile)
+  .Favorites
+    padding-top: $size-header-height-mobile;
+
+    &__header
+      height: $size-header-height-mobile;
