--- a/src/components/global/CategoriesMenu/categoriesMenu.styl
+++ b/src/components/global/CategoriesMenu/categoriesMenu.styl
@@ -19,3 +19,8 @@
     & img
       height: 100%;
       width: 100%;
+
+@media (max-width: $tablet)
+  .CategoriesMenu
+    &__text
+      display: none;
