--- a/src/components/global/SortBy/sortBy.styl
+++ b/src/components/global/SortBy/sortBy.styl
@@ -29,3 +29,7 @@
       background-color: $color-button;
       color: $color-red;
       font-weight: 700;
+
+@media (max-width: $tablet)
+  .SortBy
+    justify-content: center
