--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -14,8 +14,17 @@ $color-red = #FF0018;
 $size-card-width = 20.8rem;
 $size-card-height = 35.2rem;
 $size-header-height = 8rem;
+$size-header-height-mobile = 12.8rem;
 $size-max-width = 102.4rem;
 
+// breakpoints
+$mobile = 480px;
+$tablet = 768px;
+$desktop = 1024px;
+$wide = 1800px;
+$hd = 2652px;
+
+// colors for theme
 html 
   --theme-text: #000;
   --theme-background: #fff6f6;
