--- a/src/components/categories/Categories/categories.styl
+++ b/src/components/categories/Categories/categories.styl
@@ -11,3 +11,10 @@
 
   &__main
     padding-top: $size-header-height;
+
+@media (max-width: $mobile)
+  .Categories
+    padding-top: $size-header-height-mobile;
+
+    &__header
+      height: $size-header-height-mobile;
