--- a/src/components/global/Navbar/navbar.styl
+++ b/src/components/global/Navbar/navbar.styl
@@ -12,6 +12,8 @@
     max-width: $size-max-width;
     padding: 0 2.4rem;
 
+  &__right
+    display: flex;
 
   &__logo
     width: 16rem;
@@ -40,3 +42,23 @@
       & img
         height: 100%;
         width: 100%;
+
+@media (max-width: $tablet)
+  .Navbar
+    &__content
+      padding: 0 1.6rem;
+
+    &__logo
+      width: 6.4rem;
+
+    &__favorites
+      &__text
+        display: none;
+
+@media (max-width: $mobile)
+  .Navbar
+    &__content
+      flex-wrap: wrap;
+      justify-content: space-between;
+      max-width: 100vw;
+      padding-bottom: 0.8rem;
