--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -44,11 +44,22 @@ html.dark {
 .AmiiboList {
   display: flex;
   justify-content: center;
+  padding: 0 1.6rem;
 }
 .AmiiboList__content {
   display: grid;
   gap: 2.4rem;
   grid-template-columns: repeat(3, 20.8rem);
+}
+@media (max-width: 768px) {
+  .AmiiboList__content {
+    grid-template-columns: repeat(2, 20.8rem);
+  }
+}
+@media (max-width: 480px) {
+  .AmiiboList__content {
+    grid-template-columns: repeat(1, 20.8rem);
+  }
 }
 .Navbar {
   align-items: center;
@@ -63,6 +74,9 @@ html.dark {
   margin: auto;
   max-width: 102.4rem;
   padding: 0 2.4rem;
+}
+.Navbar__right {
+  display: flex;
 }
 .Navbar__logo {
   width: 16rem;
@@ -92,6 +106,25 @@ html.dark {
   height: 100%;
   width: 100%;
 }
+@media (max-width: 768px) {
+  .Navbar__content {
+    padding: 0 1.6rem;
+  }
+  .Navbar__logo {
+    width: 6.4rem;
+  }
+  .Navbar__favorites__text {
+    display: none;
+  }
+}
+@media (max-width: 480px) {
+  .Navbar__content {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 100vw;
+    padding-bottom: 0.8rem;
+  }
+}
 .SearchAmiibos {
   flex: 1;
 }
@@ -102,7 +135,10 @@ html.dark {
   padding: 1.6rem;
 }
 .SearchAmiibos__item__image {
+  align-items: center;
+  display: flex;
   height: 6.4rem;
+  justify-content: center;
   width: 6.4rem;
 }
 .SearchAmiibos__item__image img {
@@ -123,6 +159,12 @@ html.dark {
   font-size: 1.6rem;
   font-weight: 700;
   padding: 2.4rem;
+}
+@media (max-width: 480px) {
+  .SearchAmiibos {
+    max-width: 100%;
+    order: 1;
+  }
 }
 .SearchBar {
   align-items: center;
@@ -165,6 +207,11 @@ html.dark {
 }
 .SearchBar__results > div:last-child {
   border: none;
+}
+@media (max-width: 768px) {
+  .SearchBar {
+    margin-left: 0.8rem;
+  }
 }
 .Backdrop {
   background-color: rgba(0,0,0,0.2);
@@ -227,11 +274,24 @@ html.dark {
 .InfoBar__grid {
   display: grid;
   gap: 2.4rem;
-  grid-template-columns: repeat(2, 32rem);
+  grid-template-columns: repeat(2, 48rem);
   padding-bottom: 2.4rem;
 }
 .InfoBar__grid__title {
   font-size: 4rem;
+}
+@media (max-width: 1024px) {
+  .InfoBar__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .InfoBar__grid {
+    grid-template-columns: repeat(3, calc(100vw - 3.2rem));
+  }
+  .InfoBar__grid__title {
+    text-align: center;
+  }
 }
 .SortBy {
   align-items: center;
@@ -264,6 +324,11 @@ html.dark {
   background-color: #f7f8f9;
   color: #ff0018;
   font-weight: 700;
+}
+@media (max-width: 768px) {
+  .SortBy {
+    justify-content: center;
+  }
 }
 .Filters {
   padding: 0 1.6rem;
@@ -383,6 +448,11 @@ html.dark {
   height: 100%;
   width: 100%;
 }
+@media (max-width: 768px) {
+  .CategoriesMenu__text {
+    display: none;
+  }
+}
 .Home {
   padding-top: 8rem;
 }
@@ -397,16 +467,26 @@ html.dark {
 }
 .Home__main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   padding-top: 8rem;
 }
 .Home__main__info {
-  padding: 0 1.6rem;
+  display: flex;
+  justify-content: center;
 }
 .Home__dark-toggle {
   position: fixed;
   top: 10.4rem;
   right: 3.2rem;
+}
+@media (max-width: 480px) {
+  .Home {
+    padding-top: 12.8rem;
+  }
+  .Home__header {
+    height: 12.8rem;
+  }
 }
 .Results {
   padding-top: 8rem;
@@ -422,6 +502,14 @@ html.dark {
 .Results__main {
   padding-top: 8rem;
 }
+@media (max-width: 480px) {
+  .Results {
+    padding-top: 12.8rem;
+  }
+  .Results__header {
+    height: 12.8rem;
+  }
+}
 .Categories {
   padding-top: 8rem;
 }
@@ -435,6 +523,14 @@ html.dark {
 }
 .Categories__main {
   padding-top: 8rem;
+}
+@media (max-width: 480px) {
+  .Categories {
+    padding-top: 12.8rem;
+  }
+  .Categories__header {
+    height: 12.8rem;
+  }
 }
 .Favorites {
   padding-top: 8rem;
@@ -450,6 +546,14 @@ html.dark {
 }
 .Favorites__main {
   padding-top: 8rem;
+}
+@media (max-width: 480px) {
+  .Favorites {
+    padding-top: 12.8rem;
+  }
+  .Favorites__header {
+    height: 12.8rem;
+  }
 }
 *,
 *::before,
