--- a/src/components/global/SortBy/sortBy.styl
+++ b/src/components/global/SortBy/sortBy.styl
@@ -33,3 +33,8 @@
 @media (max-width: $tablet)
   .SortBy
     justify-content: center
+
+@media (max-width: $mobile)
+  .SortBy
+    margin: 0 1.6rem;
+    padding-bottom: 1.6rem;
