change color of the foreground. Change dependencies

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,7 +7,7 @@ html {
 html.dark {
   --theme-text: #fff;
   --theme-background: #000;
-  --theme-foreground: #222;
+  --theme-foreground: #4b4b4b;
 }
 .AmiiboItem {
   align-items: center;
